--- a/nosql/pom.xml
+++ b/nosql/pom.xml
@@ -2,9 +2,9 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<groupId>com.weicoder</groupId> 
+		<groupId>com.weicoder</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.3.6</version>
+		<version>2.3.6.1</version>
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>core</artifactId>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
@@ -32,6 +32,11 @@
 		<dependency>
 			<groupId>org.apache.curator</groupId>
 			<artifactId>curator-framework</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-recipes</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
