--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.weicoder</groupId>
 	<artifactId>parent</artifactId>
-	<version>2.3.6</version><!-- -SNAPSHOT -->
+	<version>2.3.6.1</version><!-- -SNAPSHOT -->
 	<packaging>pom</packaging>
 	<name>parent</name>
 	<description>java tools</description>
@@ -17,16 +17,14 @@
 		<module>../dao</module>
 		<module>../socket</module>
 		<module>../nosql</module>
-		<!-- 
-		<module>../frame</module>
-		<module>../outdated</module>
-		 -->
+	    <module>../frame</module>
+	    <module>../outdated</module>
 	</modules>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<parent.version>2.3.6</parent.version>
+		<parent.version>2.3.6.1</parent.version>
 	</properties>
 
 	<licenses>
@@ -54,7 +52,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>3.8.0</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -92,7 +90,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
-						<version>3.7.0</version>
+						<version>3.8.0</version>
 						<configuration>
 							<source>1.8</source>
 							<target>1.8</target>
@@ -159,7 +157,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
-						<version>3.7.0</version>
+						<version>3.8.0</version>
 						<configuration>
 							<source>1.8</source>
 							<target>1.8</target>
@@ -254,13 +252,13 @@
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpasyncclient</artifactId>
-				<version>4.1.3</version>
+				<version>4.1.4</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.protobuf</groupId>
 				<artifactId>protobuf-java</artifactId>
-				<version>3.6.0</version>
+				<version>3.6.1</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
@@ -297,6 +295,12 @@
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
+				<groupId>org.apache.curator</groupId>
+				<artifactId>curator-recipes</artifactId>
+				<version>4.0.1</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.kafka</groupId>
 				<artifactId>kafka-clients</artifactId>
 				<version>1.1.1</version>
@@ -305,7 +309,8 @@
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
-				<version>25.1-jre</version>
+				<version>26.0-jre</version>
+				<scope>provided</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
