--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.weicoder</groupId>
 	<artifactId>parent</artifactId>
-	<version>2.3.6.1</version><!-- -SNAPSHOT -->
+	<version>2.3.6.2</version>
 	<packaging>pom</packaging>
 	<name>parent</name>
 	<description>java tools</description>
@@ -24,7 +24,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<parent.version>2.3.6.1</parent.version>
+		<parent.version>2.3.6.2</parent.version>
 	</properties>
 
 	<licenses>
