--- a/frame/pom.xml
+++ b/frame/pom.xml
@@ -13,7 +13,6 @@
 	<description>java frame tools</description>
 	<url>https://github.com/wdcode/weicoder</url> 
 
- 
 	<dependencies>
 		<dependency>
 			<groupId>javax</groupId>
@@ -23,45 +22,10 @@
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>core</artifactId> 
-		</dependency> 
+		</dependency>  
 		<dependency>
-			<groupId>org.apache.struts</groupId>
-			<artifactId>struts2-core</artifactId>
-			<version>2.5.16</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-orm</artifactId>
-			<version>5.0.8.RELEASE</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-support</artifactId>
-			<version>5.0.8.RELEASE</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId> 
-			<scope>provided</scope> 
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-search</artifactId>
-			<version>5.10.3.Final</version>
-			<scope>provided</scope> 
-		</dependency>
-		<dependency>
-			<groupId>org.quartz-scheduler</groupId>
-			<artifactId>quartz</artifactId> 
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>druid</artifactId> 
-			<scope>provided</scope>
-		</dependency>
+			<groupId>com.weicoder</groupId>
+			<artifactId>dao</artifactId> 
+		</dependency>    
 	</dependencies>
 </project>
