--- a/frame/pom.xml
+++ b/frame/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.3.7</version>
+		<version>2.3.8</version>
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
@@ -21,7 +21,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.weicoder</groupId>
-			<artifactId>core</artifactId> 
+			<artifactId>web</artifactId> 
 		</dependency>  
 		<dependency>
 			<groupId>com.weicoder</groupId>
