--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -16,6 +16,7 @@
 		<module>../web</module>
 		<module>../dao</module>
 		<module>../socket</module>
+		<module>../websocket</module>
 		<module>../nosql</module>
 		<module>../frame</module>
 		<module>../outdated</module>
@@ -254,7 +255,7 @@
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-core</artifactId>
-				<version>5.3.7.Final</version>
+				<version>5.4.0.Final</version>
 			</dependency>
 			<dependency>
 				<groupId>com.alibaba</groupId>
@@ -274,7 +275,7 @@
 			<dependency>
 				<groupId>redis.clients</groupId>
 				<artifactId>jedis</artifactId>
-				<version>2.9.0</version>
+				<version>3.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.curator</groupId>
@@ -294,7 +295,7 @@
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
-				<version>27.0-jre</version>
+				<version>27.0.1-jre</version>
 			</dependency>
 			<dependency>
 				<groupId>io.lettuce</groupId>
