--- a/nosql/pom.xml
+++ b/nosql/pom.xml
@@ -44,5 +44,15 @@
 			<artifactId>kafka-clients</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.lettuce</groupId>
+			<artifactId>lettuce-core</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
