--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -26,10 +26,12 @@
 		<dependency>
 			<groupId>io.lettuce</groupId>
 			<artifactId>lettuce-core</artifactId> 
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.redisson</groupId>
 			<artifactId>redisson</artifactId> 
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
