--- a/xml/pom.xml
+++ b/xml/pom.xml
@@ -20,12 +20,16 @@
 			<artifactId>core</artifactId> 
 		</dependency> 
 		<dependency>
-			<groupId>org.jdom</groupId>
-			<artifactId>jdom2</artifactId> 
-		</dependency>   
-		<dependency>
-			<groupId>com.thoughtworks.xstream</groupId>
-			<artifactId>xstream</artifactId> 
-		</dependency> 
+				<groupId>org.jdom</groupId>
+				<artifactId>jdom2</artifactId> 
+			</dependency>
+			<dependency>
+				<groupId>org.dom4j</groupId>
+				<artifactId>dom4j</artifactId> 
+			</dependency>
+			<dependency>
+				<groupId>com.thoughtworks.xstream</groupId>
+				<artifactId>xstream</artifactId> 
+			</dependency>
 	</dependencies> 
 </project>
