--- a/oauth/pom.xml
+++ b/oauth/pom.xml
@@ -4,13 +4,24 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.3.9</version>
+		<version>3.0.1</version>
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>common</artifactId>
-	<packaging>jar</packaging> 
-	<name>common</name>
-	<description>java tools</description>
+	<artifactId>oauth</artifactId>
+	<packaging>jar</packaging>
+	<name>oauth</name>
+	<description>java oauth</description>
 	<url>https://github.com/wdcode/weicoder</url>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.weicoder</groupId>
+			<artifactId>web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.weicoder</groupId>
+			<artifactId>http</artifactId>
+		</dependency>
+	</dependencies>
 </project>
