--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.weicoder</groupId>
 	<artifactId>parent</artifactId>
-	<version>2.3.8</version>
+	<version>2.3.9</version>
 	<packaging>pom</packaging>
 	<name>parent</name>
 	<description>java tools</description>
@@ -17,6 +17,7 @@
 		<module>../dao</module>
 		<module>../socket</module>
 		<module>../websocket</module>
+		<module>../oauth</module>
 		<module>../nosql</module>
 		<module>../frame</module>
 		<module>../outdated</module>
@@ -25,7 +26,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<parent.version>2.3.8</parent.version>
+		<parent.version>2.3.9</parent.version>
 	</properties>
 
 	<licenses>
