--- a/socket/.project
+++ b/socket/.project
@@ -31,7 +31,9 @@
 			</arguments>
 		</buildCommand>
 	</buildSpec>
-	<natures> 
+	<natures>
+		<nature>org.eclipse.jem.workbench.JavaEMFNature</nature>
+		<nature>org.eclipse.wst.common.modulecore.ModuleCoreNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
