--- a/protobuf/pom.xml
+++ b/protobuf/pom.xml
@@ -17,7 +17,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.weicoder</groupId>
-			<artifactId>core</artifactId>
+			<artifactId>common</artifactId>
 		</dependency>  
 		<dependency>
 			<groupId>com.google.protobuf</groupId>
