--- a/pom.xml
+++ b/pom.xml
@@ -112,11 +112,14 @@
 			</dependencyManagement>
 		</profile>
 		<profile>
-			<id>release</id>
+			<id>jdk8</id>
 			<dependencyManagement>
 				<dependencies>
 				</dependencies>
 			</dependencyManagement>
+			<build>
+				<finalName>${project.artifactId}-${project.version}-jdk8</finalName>
+			</build>
 		</profile>
 	</profiles>
 
