--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>1.4</version>
 	</parent>
 	<artifactId>weicoder</artifactId>
-	<version>3.3.7</version>
+	<version>3.3.8</version>
 	<packaging>pom</packaging>
 
 	<properties> 
@@ -29,29 +29,29 @@
 		<protobuf-java>3.11.4</protobuf-java>
 		<curator-framework>4.3.0</curator-framework>
 		<HikariCP>3.4.3</HikariCP>
-		<solr-solrj>8.5.1</solr-solrj>
+		<solr-solrj>8.5.1</solr-solrj> 
+		<asynchbase>1.8.2</asynchbase>
+		<hbase-client>2.2.4</hbase-client> 
+		<druid>1.1.22</druid>
 		<httpclient5>5.0</httpclient5>
 		<httpclient>4.5.12</httpclient>
 		<httpcore>4.4.13</httpcore>
 		<httpasyncclient>4.1.4</httpasyncclient>
-		<asynchbase>1.8.2</asynchbase>
-		<hbase-client>2.2.4</hbase-client>
-		<dom4j>2.1.3</dom4j>
-		<xstream>1.4.12</xstream>
-		<quartz>2.3.2</quartz>
-		<opencsv>5.1</opencsv>
-		<mina-core>2.1.3</mina-core>
 		<lettuce-core>5.2.2.RELEASE</lettuce-core>
-		<redisson>3.12.5</redisson>
-		<yaml>1.26</yaml>
-		<disruptor>3.4.2</disruptor>
-		<druid>1.1.22</druid>
-		<netty3>3.10.6.Final</netty3>
-		<commons-dbcp2>2.7.0</commons-dbcp2>
+		<redisson>3.12.5</redisson>  
 		<gson>2.8.6</gson>
+		<commons-dbcp2>2.7.0</commons-dbcp2>
+		<snakeyaml>1.26</snakeyaml>
+		<opencsv>5.1</opencsv>
+		<xstream>1.4.12</xstream>
+		<dom4j>2.1.3</dom4j>
+		<quartz>2.3.2</quartz>
+		<mina-core>2.1.3</mina-core>
+		<disruptor>3.4.2</disruptor>
 		<commons-compress>1.20</commons-compress>
 		<commons-email>1.5</commons-email>
 		<jdom2>2.0.6</jdom2>
+		<netty3>3.10.6.Final</netty3>
 		<Memcached-Java-Client>3.0.2</Memcached-Java-Client>
 	</properties>
 
@@ -92,8 +92,10 @@
 		<module>solr</module>
 		<module>tomcat</module>
 		<module>web</module>
-		<module>websocket</module>
+		<module>websocket</module> 
+		<module>jdom2</module>
 		<module>xml</module>
+		<module>xmlbean</module>
 		<module>yaml</module>
 		<module>zookeeper</module>
 		<module>zip</module>
@@ -298,6 +300,16 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>xml</artifactId>
 				<version>${project.version}</version>
+			</dependency> 
+			<dependency>
+				<groupId>com.weicoder</groupId>
+				<artifactId>jdom2</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.weicoder</groupId>
+				<artifactId>xmlbean</artifactId>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
@@ -448,12 +460,7 @@
 				<groupId>org.apache.hbase</groupId>
 				<artifactId>hbase-client</artifactId>
 				<version>${hbase-client}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.poi</groupId>
-				<artifactId>poi</artifactId>
-				<version>${poi}</version>
-			</dependency>
+			</dependency> 
 			<dependency>
 				<groupId>org.apache.poi</groupId>
 				<artifactId>poi-ooxml</artifactId>
@@ -537,7 +544,7 @@
 			<dependency>
 				<groupId>org.yaml</groupId>
 				<artifactId>snakeyaml</artifactId>
-				<version>${yaml}</version>
+				<version>${snakeyaml}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
